Fixing typist headers alignment

--- a/portfolio/src/assets/styles/fonts.scss
+++ b/portfolio/src/assets/styles/fonts.scss
@@ -26,7 +26,7 @@ li { list-style-type: none; font-family: poppins, sans-serif !important; }
     color: white;
     letter-spacing: 2px;
     text-shadow: 2px 2px 4px rbga(0,0,0, .7);
-    text-align: left;
+    text-align: center;
     font-family: open24 !important;
 }
 p, li, a, em, strong {
